# game-launcher

./: README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json
src/: types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  process.rs
src/data/: emulators.yaml
src/lib/: emulators.ts  launch.ts  os.ts  scan.ts
src/state/: store.ts
src/ui/: App.tsx
